objects/hed__Relationship_Lookup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Provides table of gendered and gender-neutral reciprocal relationships for various relationship types (ie. Father-Son, Father-Daughter, Father-Child)</description>
    <label>Relationship Lookup</label>
    <fields>
        <fullName>hed__Male__c</fullName>
        <description>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Male gender.</description>
        <inlineHelpText>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Male gender.</inlineHelpText>
        <label>Male</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this reciprocal lookup is active.</description>
        <inlineHelpText>Indicates if this reciprocal lookup is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Female__c</fullName>
        <description>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Female gender.</description>
        <inlineHelpText>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Female gender.</inlineHelpText>
        <label>Female</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Neutral__c</fullName>
        <description>The value used if the Contact&apos;s Gender and Saluation fields don&apos;t indicate gender.</description>
        <inlineHelpText>The value used if the Contact&apos;s Gender and Saluation fields don&apos;t indicate gender.</inlineHelpText>
        <label>Neutral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>